[package]
name = "botc"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.91"
base32 = "0.5.1"
bincode = "1.3.3"
clap = "4.5.20"
clap_derive = "4.5.18"
flate2 = "1.0.34"
regex = "1.11.1"
serde = {version = "1.0.213", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
