[package]
name = "botc"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.91"
base32 = "0.5.1"
bincode = "1.3.3"
clap = "4.5.20"
clap_derive = "4.5.18"
flate2 = "1.0.34"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
rand_derive = "0.5.0"
regex = "1.11.1"
serde = {version = "1.0.213", features = ["derive"]}
getrandom = { version = "0.2.15", features = ["js"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
